--- a/app/src/main/res/layout/activity_new_category.xml
+++ b/app/src/main/res/layout/activity_new_category.xml
@@ -53,93 +53,95 @@
         android:hint="Please input category here"
         app:layout_constraintTop_toBottomOf="@id/tv_create_categories" />
 
-    <TextView
-        android:id="@+id/tv_select_color"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:layout_marginHorizontal="32dp"
-        android:text="Select color"
-        android:textSize="14sp"
-        android:textColor="#8E8E93"
-        app:layout_constraintTop_toBottomOf="@id/et_category"
-        app:layout_constraintStart_toStartOf="parent" />
+<!--    <TextView-->
+<!--        android:id="@+id/tv_select_color"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="28dp"-->
+<!--        android:layout_marginHorizontal="32dp"-->
+<!--        android:text="Select color"-->
+<!--        android:textSize="14sp"-->
+<!--        android:textColor="#8E8E93"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/et_category"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
-    <LinearLayout
-        android:id="@+id/ll_colors"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="32dp"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/tv_select_color">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/ll_colors"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="16dp"-->
+<!--        android:layout_marginHorizontal="32dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/tv_select_color">-->
 
-        <View
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:backgroundTint="#EE0000"
-            android:background="@drawable/circle_background" />
+<!--        <View-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:backgroundTint="#EE0000"-->
+<!--            android:background="@drawable/circle_background" />-->
 
-        <View
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:backgroundTint="#FD891D"
-            android:background="@drawable/circle_background" />
+<!--        <View-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:backgroundTint="#FD891D"-->
+<!--            android:background="@drawable/circle_background" />-->
 
-        <View
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:backgroundTint="#FFFF00"
-            android:background="@drawable/circle_background" />
+<!--        <View-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:backgroundTint="#FFFF00"-->
+<!--            android:background="@drawable/circle_background" />-->
 
-        <View
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:backgroundTint="#27B83F"
-            android:background="@drawable/circle_background" />
+<!--        <View-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:backgroundTint="#27B83F"-->
+<!--            android:background="@drawable/circle_background" />-->
 
-        <View
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:backgroundTint="#007BD2"
-            android:background="@drawable/circle_background" />
+<!--        <View-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:backgroundTint="#007BD2"-->
+<!--            android:background="@drawable/circle_background" />-->
 
-        <View
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:backgroundTint="#F73777"
-            android:background="@drawable/circle_background" />
+<!--        <View-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:backgroundTint="#F73777"-->
+<!--            android:background="@drawable/circle_background" />-->
 
-        <View
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_weight="1"
-            android:backgroundTint="#8220B0"
-            android:background="@drawable/circle_background" />
+<!--        <View-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:backgroundTint="#8220B0"-->
+<!--            android:background="@drawable/circle_background" />-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
     <Button
         android:id="@+id/btn_add_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#EF1D26"
-        android:layout_marginTop="32dp"
         android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="#EF1D26"
+        android:textColor="@color/white"
         android:text="Add Category"
-        app:layout_constraintTop_toBottomOf="@id/ll_colors"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_category" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
