--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -74,57 +74,57 @@
 
 
     <!-- Category Filter -->
-    <LinearLayout
-        android:id="@+id/filterTabs"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/topBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/filterTabs"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:gravity="center"-->
+<!--        android:layout_marginTop="1dp"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/topBar"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent">-->
 
-        <Button
-            android:id="@+id/btnAll"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="All"
-            android:backgroundTint="#EEEEEE"
-            android:textColor="#EF1D26"
-            style="?android:attr/borderlessButtonStyle"/>
+<!--        <Button-->
+<!--            android:id="@+id/btnAll"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:text="All"-->
+<!--            android:backgroundTint="#EEEEEE"-->
+<!--            android:textColor="#EF1D26"-->
+<!--            style="?android:attr/borderlessButtonStyle"/>-->
 
-        <Button
-            android:id="@+id/btnPersonal"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="Personal"
-            android:layout_marginStart="8dp"
-            android:backgroundTint="#E6E6E6"
-            android:textColor="#000000"
-            style="?android:attr/borderlessButtonStyle"/>
+<!--        <Button-->
+<!--            android:id="@+id/btnPersonal"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:text="Personal"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:backgroundTint="#E6E6E6"-->
+<!--            android:textColor="#000000"-->
+<!--            style="?android:attr/borderlessButtonStyle"/>-->
 
-        <Button
-            android:id="@+id/btnKuliah"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:backgroundTint="#E6E6E6"
-            android:text="Kuliah"
-            android:textColor="#000000" />
+<!--        <Button-->
+<!--            android:id="@+id/btnKuliah"-->
+<!--            style="?android:attr/borderlessButtonStyle"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:backgroundTint="#E6E6E6"-->
+<!--            android:text="Kuliah"-->
+<!--            android:textColor="#000000" />-->
 
-        <Button
-            android:id="@+id/btnKerja"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="Kerja"
-            android:layout_marginStart="8dp"
-            android:backgroundTint="#E6E6E6"
-            android:textColor="#000000"
-            style="?android:attr/borderlessButtonStyle"/>
+<!--        <Button-->
+<!--            android:id="@+id/btnKerja"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:text="Kerja"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:backgroundTint="#E6E6E6"-->
+<!--            android:textColor="#000000"-->
+<!--            style="?android:attr/borderlessButtonStyle"/>-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
     <!-- Your To Do List Text -->
 
@@ -145,18 +145,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.055"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filterTabs" />
+        app:layout_constraintTop_toBottomOf="@+id/topBar" />
 
     <!-- Ilustrasi kosong -->
+
     <ImageView
         android:id="@+id/emptyIllustration"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="152dp"
         android:src="@drawable/empty_amico"
-        app:layout_constraintTop_toBottomOf="@id/todoTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/todoTitle" />
 
     <TextView
         android:id="@+id/emptyText"
