--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -52,21 +52,22 @@
             android:background="@drawable/rounded_button"
             android:src="@drawable/ic_category"
             android:scaleType="centerInside"
+            android:backgroundTint="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="#EF1D26" />
 
         <!-- View Completed Tasks di kanan -->
-        <TextView
+        <ImageButton
             android:id="@+id/viewCompletedText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="View Completed Tasks"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/rounded_button"
+            android:src="@drawable/ic_completed_task"
+            android:backgroundTint="@color/white"
+
+            android:scaleType="centerInside"
             android:textColor="#EF1D26"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:clickable="true"
-            android:focusable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
